# ML_DOMINO

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requarements.txt
domino/: app.py  create_decision_tree.py  create_linear_classificator.py  create_linear_classificators.py  data_to_excel.py  domino_test.py  experiments.py  random_forest_params_throughing.py  save_models_to_json.py  save_sample_data.py  show_ML_logs.py  show_sample_size.py  upload.py
domino/ML/: __init__.py  abstratc.py  classificator.py  decision_tree.py
domino/ML_learn/: __init__.py  abstract.py  abstract_classificator.py  abstract_decision_tree.py  decision_tree.py  linear_classificator.py  manage.py
domino/app/: app.py  views.py
domino/best_model_container/: __init__.py  abstract.py  best_model_container.py
domino/config/: config.ini  config.py
domino/db/: __init__.py  base.py  crud.py  operations.py
domino/domino_array/: __init__.py
domino/domino_generate/: __init__.py  domino_generate_arrays.py  domino_generate_funcs.py  simple_generate_funcs.py
domino/domino_obj/: domino_array_obj.py  generator_obj_abs.py  generators_obj.py
domino/entrope/: funcs.py
domino/files_navigation/: __init__.py  navigation.py
domino/graphs/: __init__.py  extract_data_funcs.py  graphs.py
domino/loger/: __init__.py  loger.py
domino/models/: ml_obj.py  pictures.py
domino/order_check/: __init__.py  domino_process_func_obj.py  funcs_ensembles.py  funcs_multy.py  funcs_process.py  funcs_self.py  simmetric_mark.py
domino/schemas/: __init__.py  base.py  domino.py  ml_obj.py  (+1 more)
(+149 files in other folders)
