[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["gia <gia@dipcenter.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
numpy = "^2.1.0"
sqlalchemy = "^2.0.32"
threadpoolctl = "^3.5.0"
scikit-learn = "^1.5.1"
tzdata = "^2024.1"
pandas = "^2.2.2"
uvicorn = "^0.30.6"
sniffio = "^1.3.1"
fastapi = "^0.112.1"
jinja2 = "^3.1.4"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
