[tool.poetry]
name = "domino"
version = "0.1.0"
description = ""
authors = ["gia <gia@dipcenter.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
numpy = "^2.1.0"
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
